# Complete_Navigation_Pipeline

./: .gitignore  .gitmodules  README.md  docker-compose.yaml  requirements.txt
.catkin_tools/profiles/default/: devel_collisions.txt
docker/: dev-overlay.Dockerfile
maps/: map_icp_new.pcd  map_pcd.pcd
src/jackal_description/urdf/: accessories.urdf.xacro  jackal.gazebo  jackal.urdf.xacro  kinect_camera.xacro
src/mapsaver/: CMakeLists.txt  package.xml
src/mapsaver/src/: mapsaver.cpp
src/me5413_mapping/: CMakeLists.txt  package.xml
src/me5413_mapping/launch/: hector_slam.launch  octomap_server.launch
src/me5413_msgs/: CMakeLists.txt  package.xml
src/me5413_perception/: CMakeLists.txt  package.xml  setup.py
src/me5413_perception/config/: config.yaml
src/me5413_perception/launch/: exploration.launch  recognition.launch  transformation.launch
src/me5413_perception/src/: digit_recognition.py  exploration_manager.py  test.py  transformation_1.py  transformation_2.py  trasnformation.py
src/me5413_perception/yolov8/: last.pt
src/me5413_world/: package.xml
src/me5413_world/launch/: navigation.launch  pcd_view.launch  world.launch
src/me5413_world/maps/: 2_2dlidar_cartographer.pgm  2_2dlidar_cartographer.yaml  2_2dlidar_cartographer_test2.pgm  2_2dlidar_cartographer_test2.yaml  2_2dlidar_cartographer_wall.pgm  2_2dlidar_cartographer_wall.yaml  2d_map.pgm  2d_map.yaml  2d_map_close.pgm  2d_map_close.yaml  aloam_test_map.pgm  aloam_test_map.yaml  aloam_test_map2.pgm  aloam_test_map2.yaml  hector_map_2.pgm  hector_map_2.yaml  hector_map_2_wall.yaml  hector_map_wall.pgm  hector_map_wall.yaml  map.yaml  test.pgm  test.yaml  test_map1_rtabmap_2d.pgm  test_map2.yaml  test_map2_rtabmap_2d.pgm  test_map3_rtabmap_2d_different_loc.pgm  test_map3_rtabmap_2d_different_loc.yaml  test_map_ros_cartographer_2d.pgm  test_map_ros_cartographer_2d.yaml  test_map_ros_cartographer_2d_without_imu.pgm  test_map_ros_cartographer_2d_without_imu.yaml  test_rtabmap_2d_closeglass.pgm  test_rtabmap_2d_closeglass.yaml  test_rtabmap_3d.pgm  test_rtabmap_3d.yaml  test_rtabmap_final_2d.pgm  test_wall.pgm  (+2 more)
src/pcl_matching/: CMakeLists.txt
(+27 files in other folders)
